force-app/main/default/objects/My_Lead__c/My_Lead__c.object-meta.xml
<CustomObject>
    <label>My Leads</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>