force-app/main/default/objects/My_Lead__c/validationRules/Phone_number_verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_verification</fullName>
    <active>true</active>
    <description>Phone number should be equal to 10 digit.</description>
    <errorConditionFormula>(LEN( Phone__c )  &lt;&gt; 10)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>The Phone number entered is invalid</errorMessage>
</ValidationRule>