force-app/main/default/objects/My_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Country__c</columns>
    <columns>City__c</columns>
    <columns>Job__c</columns>
    <columns>Total_Income__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>